--- a/Yuki/Yuki.csproj
+++ b/Yuki/Yuki.csproj
@@ -7,6 +7,7 @@
     <InvariantGlobalization>false</InvariantGlobalization>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Ardalis.GuardClauses" Version="4.3.0" />
     <PackageReference Include="Carter" Version="8.0.0" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.0" />
     <PackageReference Include="MediatR" Version="12.2.0" />
@@ -96,8 +97,11 @@
     <Compile Update="Features\Categories\DeleteCategory\CommandHandler.cs">
       <DependentUpon>Command.cs</DependentUpon>
     </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Features\Matches\Model" />
+    <Compile Update="Features\Invoices\GetInvoices\QueryResult.cs">
+      <DependentUpon>Query.cs</DependentUpon>
+    </Compile>
+    <Compile Update="Features\Invoices\GetInvoices\QueryHandler.cs">
+      <DependentUpon>Query.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
 </Project>
